RESOLVED FIXED125035
[CTTE] The WebPageProxy's WebBackForwardList is never null so it should be stored in a Ref
https://bugs.webkit.org/show_bug.cgi?id=125035
Summary [CTTE] The WebPageProxy's WebBackForwardList is never null so it should be st...
Sam Weinig
Reported 2013-11-30 18:14:07 PST
[CTTE] The WebPageProxy's WebBackForwardList is never null so it should be stored in a Ref
Attachments
Patch (8.16 KB, patch)
2013-11-30 18:16 PST, Sam Weinig
mitz: review+
Sam Weinig
Comment 1 2013-11-30 18:16:11 PST
Sam Weinig
Comment 2 2013-11-30 18:22:54 PST
Note You need to log in before you can comment on or make changes to this bug.