[CTTE] The WebPageProxy's WebBackForwardList is never null so it should be stored in a Ref https://bugs.webkit.org/show_bug.cgi?id=125035

Reviewed by Dan Bernstein.

* UIProcess/API/C/WKPage.cpp:
(WKPageGetBackForwardList):
* UIProcess/API/Cocoa/WKBrowsingContextController.mm:
(-[WKBrowsingContextController backForwardList]): Remove null check.
* UIProcess/WebBackForwardList.cpp:
(WebKit::WebBackForwardList::WebBackForwardList):
(WebKit::WebBackForwardList::currentItem): Constify.
(WebKit::WebBackForwardList::backItem): Constify.
(WebKit::WebBackForwardList::forwardItem): Constify.
(WebKit::WebBackForwardList::itemAtIndex): Constify.
* UIProcess/WebBackForwardList.h:
(WebKit::WebBackForwardList::create):
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::WebPageProxy):
* UIProcess/WebPageProxy.h:
(WebKit::WebPageProxy::backForwardList):


Canonical link: https://commits.webkit.org/143142@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159891 268f45cc-cd09-0410-ab3c-d52691b4dbfc